# llm-bootstrap-control-framework

./: .gitignore  AGENTS.md  README.md  critic_vs_baseline_3seed_bundle.tgz  export_experiment.zip.sha256  pyproject.toml
docs/: dependencies.md
experiment_runtime/: README.md  __init__.py  environment.py  waypoints.py
export_experiment/: ADMIN_INSTALL_LIST.txt  MANIFEST.sha256  README.md  README_ADMIN.md  README_AGENT.md  SOURCE_STATE.txt  VALIDATION.txt  env.sh  setup_llm_clis.sh  setup_python.sh  setup_system_ubuntu.sh  verify_install.py
policy_bias_lab/: AGENTIC_PRIOR_SELECTION.md  PRIOR_GENERATION_REWRITE.md  README.md  TODO_STAGE_SUCCESS_FEATURES.md  action_priors.py  agentic_orchestrator.py  arms.py  bias.py  composed_priors.py  dynamic_rewards.py  es.py  freeform_priors.py  llm_bias.py  llm_util.py  ppo_arbiter.py  ppo_bias.py  prior_eval.py  prior_ir.py  prompt_utils.py  render_checkpoint_videos.py  reporting.py  run_agentic_selection.py  run_dashboard.py  run_dsl_vs_freeform.py  run_dynamic_reward_experiment.py  run_experiment.py  run_long_ppo.py  run_marginal_value.py  run_ppo_experiment.py  run_prior_ppo.py  schema.py  tasks.py
runs_log/: README.md  ab_ladder_20260707.md  ab_oldstyle_20260707.md  action_prior_general_prompt_2h_20260622-125750.md  agentic_v3_20260703.md  agentic_v4_20260704.md  arm_adjusted.md  arm_lift_only.md  arm_stage_gated.md  armtest_20260707-011718.md  critic_diversity_4h.md  critic_diversity_4h_useinfo.md  critic_useinfo_1h_20260713.md  diagnostic_no_warmup_32env_20260622-202913.md  dofmode_consider_20260630-122438.md  (+98 more)
(+444 files in other folders)
