[project]
name = "llm-framework"
version = "0.1.0"
description = "Task-agnostic LLM action interface experiments for dexterous robot control."
requires-python = ">=3.11"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

